--- a/wp-content/themes/cidadealternativa/css/util-menu.css
+++ b/wp-content/themes/cidadealternativa/css/util-menu.css
@@ -5,6 +5,7 @@
 }
 .navbar{
     margin-bottom: 5px !important;
+    word-wrap: break-word;
 }
 /*Alteração*/
 .navbar-nav > li> .dropdown-menu{
@@ -136,10 +137,17 @@
 }
 /* Sub Menu 3*/
 
-
+a{
+    word-wrap: break-word !important;
+}
 .navbar-nav > li .dropdown-menu :nth-child(2){
-    left: 160px !important;
+    left: 101% !important;
     border-radius: 0;
+}
+
+.dropdown-menu>li>a{
+    text-align: inherit;
+    white-space: normal !important;
 }
 
 /* navbar */
