--- a/wp-content/themes/cidadealternativa/css/util-menu.css
+++ b/wp-content/themes/cidadealternativa/css/util-menu.css
@@ -15,29 +15,30 @@
 /*Alteração*/
 .navbar-nav > li> .dropdown-menu{
     background-color: #f8a034;
+
 }
 /*Alteração*/
 
 /* title */
 .navbar-default .navbar-brand {
-    color: #777;
+    color: #000;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-    color: #5E5E5E;
+    color: #d83442;
 }
 /* link */
 .navbar-default .navbar-nav > li > a {
-    color: #777;
+    color: black;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: #333;
+    color: #d83442 !important;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-    color: #555;
+    color: #d83442;
     background-color: orange;
 }
 .navbar-default .navbar-nav > .open > a,
