--- a/wp-content/themes/cidadealternativa/style.css
+++ b/wp-content/themes/cidadealternativa/style.css
@@ -74,12 +74,19 @@ span{
     min-height: 170px !important;
 }
 .box p{
-    text-align: left;
+    font-family : Verdana;
+    font-size: 12px !important;
+    text-align: justify;
+    color: #000;
 }
-p{
 
-    color: black;;
+p{
+    font-family : Verdana;
+    font-size : 12px;
+    color : #000000;
+    text-align: justify;
 }
+
 .sidebar{
     text-align: center;
     min-height: 74px;
@@ -138,3 +145,16 @@ article .sidebar p {
     height: auto;
 }
 
+.container-conteudo a{
+    text-decoration: none;
+    font-family : Verdana;
+    font-weight : bold;
+    color : #000000;
+    margin-bottom: 2%;
+}
+
+.container-conteudo span{
+    font-family : Verdana;
+    font-size: 12px !important;
+    text-align: justify;
+}
