--- a/wp-content/themes/cidadealternativa/style.css
+++ b/wp-content/themes/cidadealternativa/style.css
@@ -60,6 +60,12 @@ span{
 .container-conteudo{
     margin-top: 0.7%;
 }
+
+.container-conteudo-post img{
+    width: 100%;
+    height: auto;
+
+}
 .box{
     border-right: solid white 10px;
     padding: 10px;
@@ -73,6 +79,7 @@ span{
 .box img{
     min-height: 170px !important;
 }
+
 .box p{
     font-family : Verdana;
     font-size: 12px !important;
