--- a/wp-content/themes/cidadealternativa/style.css
+++ b/wp-content/themes/cidadealternativa/style.css
@@ -6,12 +6,9 @@ Author URI: https://fb.com/gwpr7
 Description: Tema : Cidade e Alteridade
 Version: 1.0.0
 */
-
 /*Header */
 /*
-
 hexadecimal
-
 amarelo - #f8a034
 azul - #3d9ea9
 vermelho - #d83442
@@ -46,6 +43,14 @@ vermelho - #d83442
     background-color: #3D9EA9;
     height: 50px;
 }
+.container-header a{
+    text-decoration: none;
+    color:white;
+}
+
+.container-header a:hover{
+    color: #d83442;
+}
 .menu-top{
     text-transform: uppercase;
 }
@@ -64,8 +69,8 @@ span{
 .container-conteudo-post img{
     width: 100%;
     height: auto;
-
 }
+
 .box{
     border-right: solid white 10px;
     padding: 10px;
@@ -75,9 +80,12 @@ span{
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
+    max-height: 270px;
+    min-height: 270px;
 }
 .box img{
     min-height: 170px !important;
+    max-height: 170px !important;
 }
 
 .box p{
@@ -147,7 +155,7 @@ article .sidebar p {
 /*Carousel*/
 .carousel-inner .item a img{
     width: 100%;
-    max-height: 444px !important;
+   /* max-height: 444px !important;*/
 }
 .container-conteudo img{
     width: 100% !important;
